# honey-prompt

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  detector.py  server.py
static/: dashboard.html  index.html
tests/: test_api.py  test_detector.py
