[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honey-prompt"
version = "0.1.0"
description = "A small prompt-injection honeypot with a chat UI and a live dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Mohit Dholakiya"}]
keywords = ["security", "honeypot", "prompt-injection", "llm", "ai", "red-team"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "telemetry-logger>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.urls]
Homepage = "https://github.com/MohitDholakiya/honey-prompt"
Issues = "https://github.com/MohitDholakiya/honey-prompt/issues"

[tool.setuptools]
packages = ["app"]
